# ByteChain-Academy

./: .gitignore  CONTRIBUTING.MD  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  package-lock.json
.github/: pull_request_template.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yml
backend/: .env.example  AUTHENTICATION_README.md  README.md  database.sqlite  eslint.config.mjs  lint_output.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/backend/: package-lock.json
backend/backend/src/: app.module.ts
backend/scripts/: add_swagger_controllers.js  add_swagger_dto_props.js  add_swagger_dto_props.py  add_swagger_dto_props.ts
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/admin/: admin-courses.controller.ts  admin-dao.controller.ts  admin.module.ts
backend/src/analytics/: analytics.controller.ts  analytics.e2e-spec.ts  analytics.module.ts  analytics.performance.spec.ts  analytics.service.ts
backend/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/src/certificates/: certificates.controller.spec.ts  certificates.controller.ts  certificates.module.ts  certificates.service.spec.ts  certificates.service.ts
backend/src/common/: common.module.ts
backend/src/config/: database.config.ts
backend/src/controllers/: auth.controller.ts  certificate.controller.ts  courses.controller.ts  lessons.controller.ts  profile.controller.ts  quizzes.controller.ts  rewards.controller.ts  users.controller.ts
backend/src/course/: courses.controller.spec.ts  courses.controller.ts  courses.module.ts  courses.service.spec.ts  courses.service.ts
backend/src/course-enrollment/: course-enrollment.controller.ts  course-enrollment.module.ts  course-enrollment.service.spec.ts  course-enrollment.service.ts
backend/src/courses/: courses.controller.spec.ts  courses.controller.ts  courses.module.ts  courses.service.spec.ts  courses.service.ts
backend/src/currencies/: currencies.controller.ts  currencies.module.ts  currencies.service.ts
backend/src/currency-hub/: currency-hub.controller.spec.ts  currency-hub.controller.ts  currency-hub.module.ts  currency-hub.service.spec.ts  currency-hub.service.ts
backend/src/dao/: dao.controller.ts  dao.module.ts  dao.service.spec.ts  dao.service.ts
backend/src/dto/: auth.dto.ts  certificate.dto.ts  course.dto.ts  lesson.dto.ts  quiz.dto.ts  rewards.dto.ts
backend/src/email/: email.service.ts
backend/test/: admin-dashboard.e2e-spec.ts  app.e2e-spec.ts  course-review.e2e-spec.ts  courses.e2e-spec.ts  critical-journey.e2e-spec.ts  lessons.e2e-spec.ts  quizzes.e2e-spec.ts  recommendation.service.spec.ts
contracts/: Cargo.toml  lib.rs
contracts/certificate/: Cargo.toml  README.md
contracts/dao-governance/: Cargo.toml  keep
contracts/dao-governance/src/: governance.rs  governance_test.rs  lib.rs
contracts/dao-governance/tests/: dao_tests.rs  governance_test.rs
frontend/: package.json
frontend/app/: layout.tsx
frontend/hooks/: use-admin-analytics.ts
frontend/lib/: api.ts
onchain/dao-governance/: Cargo.toml
(+307 files in other folders)
