[package]
name = "dao-governance"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
ink_lang = "4.2.1"
ink_storage = "4.2.1"
scale = "3.6"
scale-info = { version = "2.10", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }

[lib]
name = "dao_governance"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
  "ink/std",
  "ink_lang/std",
  "ink_storage/std",
  "scale/std",
  "scale-info/std",
  "serde",
  "thiserror",
]

# For testing with cargo-contract
ink-as-dependency = []
