[package]
name = "dao-governance"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
ink_metadata = { version = "4.2.0", default-features = false }
ink_storage = { version = "4.2.0", default-features = false }
ink_prelude = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
ink_env = { version = "4.2.0", default-features = false }

[lib]
name = "dao_governance"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_metadata/std",
    "ink_storage/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "serde/std",
]

# For testing with cargo-contract
ink-as-dependency = []
